# CrewForge

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json
.githooks/: commit-msg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crewforge-rs/: Cargo.toml
crewforge-rs/npm/crewforge-core-darwin-arm64/: package.json
crewforge-rs/npm/crewforge-core-darwin-x64/: package.json
crewforge-rs/npm/crewforge-core-linux-arm64/: package.json
crewforge-rs/npm/crewforge-core-linux-x64/: package.json
crewforge-rs/npm/crewforge-core-win32-x64/: package.json
crewforge-rs/src/: agent_cmd.rs  auth_cmd.rs  chat.rs  config.rs  hub.rs  init.rs  lib.rs  main.rs  managed_opencode.rs  mcp_server.rs  profiles.rs  provider.rs  tui.rs  update.rs
crewforge-rs/src/agent/: dispatch.rs  dispatcher.rs  history.rs  loop_.rs  mod.rs  orchestrate.rs  prompt.rs  research.rs  scrub.rs  testing.rs
crewforge-rs/src/agent/context/: memory.rs  mod.rs  skills.rs
crewforge-rs/src/agent/tools/: content_search.rs  file_edit.rs  file_read.rs  file_write.rs  glob_search.rs  memory.rs  mod.rs  shell.rs  traits.rs  web_fetch.rs  web_search.rs
crewforge-rs/src/auth/: gemini_oauth.rs  mod.rs  oauth_common.rs  openai_oauth.rs  profiles.rs  secrets.rs
crewforge-rs/src/provider/: anthropic.rs  anthropic_oauth.rs  codex.rs  compatible.rs  copilot.rs  gemini.rs  glm.rs  mod.rs  ollama.rs  openai.rs  openai_codex.rs  openai_oauth.rs  openrouter.rs  registry.rs  reliable.rs  router.rs  traits.rs
crewforge-rs/src/security/: mod.rs  policy.rs  secrets.rs
crewforge-rs/src/tools/: content_search.rs  file_edit.rs  file_read.rs  file_write.rs  glob_search.rs  mod.rs  shell.rs
crewforge-rs/tests/: agent_e2e.rs  chat_dry_run.rs  cli_contract.rs  init_command.rs
crewforge-ts/: README.md  package-lock.json  package.json  tsconfig.json
crewforge-ts/src/chat/: protocol.ts  run-chat-ui.ts  state.ts  ui.ts
crewforge-ts/src/tests/: chat-ui-mode.test.ts  cli.test.ts  protocol.test.ts  state.test.ts  ui.test.ts
docs/: init-chat-v2-spec.md  npm-distribution-spec.md  opensource-launch-outline.md  pure-rust-rewrite-plan.md  session-2026-02-21T15-07-44-700Z-share.md  tui-phase-c-spec.md
npm/crewforge-darwin-arm64/: package.json
npm/crewforge-darwin-x64/: package.json
npm/crewforge-linux-arm64/: package.json
npm/crewforge-linux-x64/: package.json
npm/crewforge-win32-x64/: package.json
scripts/: capture-tui-frame.sh  export-session-history.sh  install-git-hooks.sh  validate-commit-subject.sh
src/: chat.rs  config.rs  hub.rs  init.rs  kernel.rs  main.rs  managed_opencode.rs  mcp_server.rs  prompt_theme.rs  provider.rs  scheduler.rs  text.rs  tui.rs  update.rs
tests/: chat_dry_run.rs  init_command.rs
