[package]
name = "crewforge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
rand = "0.9"
rmcp = { version = "0.15.0", default-features = false, features = ["macros", "server", "transport-streamable-http-server"] }
rustyline-async = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "sync", "time", "io-util", "io-std", "fs", "signal", "net"] }
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
