[package]
name = "crewforge"
version = "0.3.1"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
cliclack = "0.3.9"
console = "0.16.2"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
rand = "0.9"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
rmcp = { version = "0.15.0", default-features = false, features = ["macros", "server", "transport-streamable-http-server"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "sync", "time", "io-util", "io-std", "fs", "signal", "net"] }
tower = { version = "0.5", features = ["util"] }
tui-textarea = { version = "0.7", features = ["crossterm"] }
unicode-width = "0.2"
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
