[package]
name = "crewforge"
version = "0.3.4"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
directories = "5"
clap = { version = "4.5", features = ["derive"] }
cliclack = "0.3.9"
console = "0.16.2"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
rand = "0.9"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
regex = "1"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json", "stream"] }
ring = "0.17"
rmcp = { version = "0.15.0", default-features = false, features = ["macros", "server", "transport-streamable-http-server"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "sync", "time", "io-util", "io-std", "fs", "signal", "net"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tui-textarea = { version = "0.7", features = ["crossterm"] }
unicode-width = "0.2"
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
glob = "0.3"
walkdir = "2"
which = "7"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
